# FRIDAY_BOT

./: .gitignore  Dockerfile  Makefile  README.md  main.py  package-lock.json  pyproject.toml  requirements.txt  requirements_langchain.txt  run_telegram.py  tmp_check_supabase.py
Dependenciais/: __init__.py  depend.py
ai/: conversation_manager.py  crewai_agents.py  decision_engine.py  mock_llm.py  rag.py  vector_db.py
config/: config.py
connectors/: __init__.py  amazon.py  base.py  casas_bahia.py  magazine_luiza.py  mercado_livre.py  shopee.py
core/: __init__.py  models.py  processors.py  services_gemini.py  services_hf.py  services_hf_router.py  services_langchain.py  services_openai.py  supabase_store.py
database/: database.py  supabase_store.py
docker/: docker-compose.yml
docs/: ARQUITETURA_COMPLETA.md
gravacao_teste/: README.md  __init__.py  grav.py  requirements.txt
interfaces/: api.py  products.py  run_telegram.py  telegram_bot_integrated.py
payments/: payments.py
scripts/: check_imports.py  clean_env.py  demo_purchase_flow.py  interactive_bot.py  run_api.py  run_record.py  run_tests.py  setup_env.py  smoke_cm.py  supabase_tables.sql
services/: __init__.py  normalization_service.py  product_service.py  products.py  validation_service.py
tests/: conftest.py  test_api.py  test_api_history.py  test_conversation.py  test_conversation_rag.py  test_depend.py  test_flow_purchase.py  test_gemini_service.py  test_grav.py  test_hf.py  test_hf_router.py  test_payments_disabled.py  test_processors.py  test_product_service.py  test_products_api.py  (+3 more)
(+7 files in other folders)
