[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boot-automatico"
version = "0.1.0"
description = "Ferramentas para gravação de tela e automação" 
authors = [ {name = "Hugo"} ]

dependencies = [
  "opencv-python",
  "numpy",
  "Pillow",
  "pyobjc-framework-Quartz",
  "selenium",
  "webdriver-manager"
]
